club readability fixed

--- a/public/css/nav-footer.css
+++ b/public/css/nav-footer.css
@@ -244,7 +244,7 @@ h4 h5 {
 }
 
 .boardContent {
-  word-break: break-all;
+  word-break: keep-all;
   margin: 3px;
 }
 .content{
@@ -713,6 +713,8 @@ display: inline-flex;
   font-weight: 600;
   margin: auto;
   text-align: center;
+  word-break: keep-all;
+  width: 65%;
 }
 .post-date{
   text-align: right;
